@@ -25,7 +25,7 @@
 
 #include <libraw1394/raw1394.h>
 #include <libraw1394/csr.h>
-#include "linux/raw1394support.h"
+//#include "linux/raw1394support.h"
 #include "control.h"
 
 #define DC1394_CAST_CAMERA_TO_LINUX(camlinux, camera) dc1394camera_linux_t * camlinux = (dc1394camera_linux_t *) camera
@@ -52,7 +52,7 @@ typedef struct __dc1394_camera_linux
   dc1394camera_t     camera;
   raw1394handle_t    handle;
   dc1394capture_t    capture;
-  SelfIdPacket_t     selfid_packet;
+  //SelfIdPacket_t     selfid_packet; // removed from linux code: it was old crap anyway.
   
 } dc1394camera_linux_t;
 
