@@ -1,3 +1,9 @@
+2007-08-15 Damien Douxchamps http://damien.douxchamps.net/
+        * SVN 416: remove topology.c/h and raw1394support.h. This gets rid of
+	           GPL files that were tainting the library license. Thanks to
+		   Olaf Hering for spoting this. The topology data is now only
+		   available on MSW (not in OSX and Linux).
+	
 2007-08-14 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 415: basler_cff.h needed <string.h>
         * SVN 414: Merged patch from Vladimir Avdonin for the compilation and
